[package]
name = "proof-params-id"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.8.3", package = "sha2ni" }
itertools = "0.9"
filecoin-proofs-api = {path = "./rust-filecoin-proofs-api"}
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "master" }