[package]
name = "filecoin-proofs"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["rc", "derive"] }
#storage-proofs = { path = "../storage-proofs" }