[package]
name = "filecoin-proofs"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage-proofs = { path = "../storage-proofs" }
serde = { version = "1.0", features = ["rc", "derive"] }
anyhow = "1.0.23"
lazy_static = "1.2"